--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "devDependencies": {
     "angular": "~1.6",
     "angular-mocks": "~1.6",
+    "eslint": "^3.14.0",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^2.0.1",
     "jasmine-core": "^2.5.2",
     "karma": "~1.4",
     "karma-chrome-launcher": "~2.0",
