--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "homepage": "https://github.com/orcasnet.com/angular-momentjs",
   "main": "src/angular-moment.js",
   "scripts": {
+    "bundle": "nwebpack && npm run bundle-umd",
+    "bundle-umd": "webpack --config webpack.config.browser.js && webpack --config webpack.config.browser-min.js",
     "test": "karma start"
   },
   "dependencies": {},
@@ -26,7 +28,9 @@
     "karma-ng-html2js-preprocessor": "~1.0.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-safari-launcher": "~1.0",
-    "moment": "~2.6.1"
+    "karma-webpack": "^2.0.1",
+    "moment": "~2.6.1",
+    "webpack": "^2.2"
   },
   "repository": {
     "type": "git",
