--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "bundle-umd": "webpack --config webpack.config.browser.js && webpack --config webpack.config.browser-min.js",
     "test": "karma start"
   },
-  "dependencies": {},
+  "dependencies": {
+    "indexof": "^0.0.1"
+  },
   "devDependencies": {
     "angular": "~1.6",
     "angular-mocks": "~1.6",
