Testing works again. Tests still broken. :(

--- a/package.json
+++ b/package.json
@@ -25,16 +25,14 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
     "jasmine-core": "^2.5.2",
-    "karma": "~1.4",
-    "karma-chrome-launcher": "~2.0",
-    "karma-coverage": "~1.1",
-    "karma-firefox-launcher": "~1.0",
-    "karma-jasmine": "1.1",
-    "karma-ng-html2js-preprocessor": "~1.0.0",
+    "karma": "^1.4.0",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-ng-html2js-preprocessor": "^1.0.0",
     "karma-phantomjs-launcher": "^1.0.2",
-    "karma-safari-launcher": "~1.0",
+    "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.1",
-    "moment": "~2.6.1",
+    "moment": "~2.6.0",
     "webpack": "^2.2"
   },
   "repository": {
