--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bundle-umd": "webpack --config webpack.config.browser.js && webpack --config webpack.config.browser-min.js",
     "test": "karma start && eslint .",
     "pretest": "rm -rf ./coverage/",
+    "test-start": "karma start --no-single-run",
     "patch": "npm version patch -m '%s'",
     "minor": "npm version minor -m '%s'",
     "version": "rm -rf lib/ dist/ && npm run bundle && git add -A lib/ dist/"
