--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+sudo: required
 language: node_js
 node_js:
   - '7'
@@ -11,6 +12,8 @@ addons:
       - g++-4.8
 
 before_script:
-  -export TZ=US/Pacific
+  - echo 'TZ=US/Pacific' | sudo tee /etc/timezone
+  - sudo dpkg-reconfigure --frontend noninteractive tzdata
+
 after_script:
   - codeclimate-test-reporter < coverage/lcov.info
